--- a/App v2/app/src/main/AndroidManifest.xml
+++ b/App v2/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:theme="@style/Theme.MarcaTruco"
         tools:targetApi="31">
 
+        <!-- Corrected placement of meta-data element -->
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-8332439849528174~5398148408"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
